[tool.poetry]
name = "lm-dw-deezer"
version = "0.0.1b551"
description = "Liberum Melodian Library for making easy tracks downloading from Deezer"
authors = ["An0nimia <an0nimia@protonmail.com>"]
license = "CC BY 4.0"
readme = "README.md"
repository = "https://github.com/An0nimia/lm_dw_deezer"


[tool.poetry.dependencies]
python = ">=3.12,<4.0"
requests = "2.31.0"
pydantic = "2.4.1"
pycryptodomex = "3.20.0"
mutagen = "1.47.0"
tqdm = "4.66.2"
typer = {version = "0.9.0", extras = ["all"]}
inquirerpy = "0.3.4"
zstandard = "0.22.0"
api-deezer-full = "^0.0.1b0"
lm-deezer-bf-dec = {version = "^0.0.1b3", optional = true}


[tool.poetry.extras]
RUSTDW = ["lm-deezer-bf-dec"]


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.poetry.scripts]
lm_dw_deezer = "lm_dw_deezer.exes.cli:main"